@@ -1,123 +1,54 @@
 ///usr/bin/env jbang "$0" "$@" ; exit $?
-// Gollek SDK Quickstart Demo
+// Legacy file name retained for compatibility during module migration.
+// This quickstart is runnable with current local artifacts.
 //
-// Complete 60-second demo showing:
-// - Model creation (ResNet-18)
-// - Data augmentation
-// - Optimizer setup
-// - Model export
-// - Performance benchmark
-//
-// Prerequisites:
-//   - Java 25+
-//   - JBang: curl -Ls https://sh.jbang.dev | bash -s -
-//   - All SDK modules built
-//
-// Usage:
-//   jbang gollek-quickstart.java
-//
-// DEPS tech.kayys.gollek:gollek-sdk-train:0.1.0-SNAPSHOT
-// DEPS tech.kayys.gollek:gollek-sdk-optimize:0.1.0-SNAPSHOT
-// DEPS tech.kayys.gollek:gollek-sdk-vision:0.1.0-SNAPSHOT
-// DEPS tech.kayys.gollek:gollek-sdk-core:0.1.0-SNAPSHOT
-// DEPS tech.kayys.gollek:gollek-sdk-augment:0.1.0-SNAPSHOT
-// DEPS tech.kayys.gollek:gollek-sdk-export:0.1.0-SNAPSHOT
-// JAVA 25+
+//JAVA 25+
+//REPOS local,mavencentral
+//DEPS tech.kayys.gollek:gollek-sdk-nn:0.1.0-SNAPSHOT
+//DEPS tech.kayys.gollek:gollek-sdk-autograd:0.1.0-SNAPSHOT
+//COMPILE_OPTIONS --add-modules jdk.incubator.vector
+//RUNTIME_OPTIONS --add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED
 
-import tech.kayys.gollek.sdk.core.*;
-import tech.kayys.gollek.sdk.train.*;
-import tech.kayys.gollek.sdk.optimize.*;
-import tech.kayys.gollek.sdk.vision.models.ResNet;
-import tech.kayys.gollek.sdk.vision.transforms.Transform;
-import tech.kayys.gollek.sdk.augment.*;
-import tech.kayys.gollek.sdk.export.*;
+import tech.kayys.gollek.ml.autograd.GradTensor;
+import tech.kayys.gollek.ml.nn.Linear;
+import tech.kayys.gollek.ml.nn.ReLU;
+import tech.kayys.gollek.ml.nn.Sequential;
+import tech.kayys.gollek.ml.nn.Trainer;
+import tech.kayys.gollek.ml.nn.optim.Adam;
+import java.util.Locale;
 
-import java.nio.file.Path;
-import java.util.List;
+class GollekQuickstart {
 
-public class gollek_quickstart {
+    public static void main(String[] args) {
+        Locale.setDefault(Locale.US);
+        System.out.println("==============================================");
+        System.out.println(" Gollek Quickstart (Compatibility Entry)");
+        System.out.println("==============================================");
 
-    public static void main(String[] args) throws Exception {
-        System.out.println("╔══════════════════════════════════════════════════════════╗");
-        System.out.println("║          Gollek SDK Quickstart Demo                      ║");
-        System.out.println("║          Complete ML/DL in 60 seconds!                   ║");
-        System.out.println("╚══════════════════════════════════════════════════════════╝");
+        Sequential model = new Sequential(
+                new Linear(8, 16),
+                new ReLU(),
+                new Linear(16, 1));
+
+        GradTensor inputs = GradTensor.randn(32, 8);
+        GradTensor targets = GradTensor.randn(32, 1);
+
+        Trainer trainer = Trainer.builder()
+                .model(model)
+                .optimizer(new Adam(model.parameters(), 0.01f))
+                .lossFunction((prediction, target) -> prediction.sub(target).pow(2f).mean())
+                .epochs(5)
+                .callback(Trainer.printCallback())
+                .build();
+
+        Trainer.TrainingResult result = trainer.fit(inputs, targets, 8);
+
+        System.out.println("----------------------------------------------");
+        System.out.printf("Final loss: %.6f%n", result.finalLoss());
+        System.out.printf("Converged(<1.0): %s%n", result.converged(1.0f));
+        System.out.println("Model parameters: " + model.parameterCountFormatted());
         System.out.println();
-
-        long startTime = System.currentTimeMillis();
-
-        // Step 1: Create model
-        System.out.println("⚡ Step 1/5: Creating ResNet-18 model...");
-        ResNet model = ResNet.resnet18(10);
-        System.out.println("   ✓ Model: " + model);
-        System.out.println();
-
-        // Step 2: Create augmentation pipeline
-        System.out.println("⚡ Step 2/5: Setting up data augmentation...");
-        AugmentationPipeline augment = new AugmentationPipeline(
-            Augmentation.RandomHorizontalFlip.create(),
-            Augmentation.RandomCrop.of(224),
-            Augmentation.ColorJitter.of(0.2, 0.2, 0.2)
-        );
-        System.out.println("   ✓ Pipeline: " + augment.size() + " transforms");
-        System.out.println();
-
-        // Step 3: Create optimizer
-        System.out.println("⚡ Step 3/5: Configuring AdamW optimizer...");
-        // Note: In real usage, pass actual model parameters
-        System.out.println("   ✓ Optimizer: AdamW (lr=0.001, wd=0.01)");
-        System.out.println();
-
-        // Step 4: Export model
-        System.out.println("⚡ Step 4/5: Exporting model to multiple formats...");
-        ModelExporter exporter = ModelExporter.builder()
-            .model(model)
-            .inputShape(1, 3, 224, 224)
-            .build();
-
-        Path outputDir = Path.of("quickstart_exports");
-        java.nio.file.Files.createDirectories(outputDir);
-
-        exporter.toONNX(outputDir.resolve("model.onnx"));
-        exporter.toGGUF(outputDir.resolve("model.gguf"), ModelExporter.Quantization.INT4);
-        exporter.toLiteRT(outputDir.resolve("model.litert"));
-
-        System.out.println("   ✓ Exported to: ONNX, GGUF (INT4), LiteRT");
-        System.out.println();
-
-        // Step 5: Benchmark
-        System.out.println("⚡ Step 5/5: Running performance benchmark...");
-        Benchmark benchmark = new Benchmark(model);
-        BenchmarkResult result = benchmark.run(new long[]{1, 3, 224, 224}, 50, 10);
-
-        System.out.println("   ✓ Benchmark complete!");
-        System.out.println();
-
-        // Summary
-        long elapsed = System.currentTimeMillis() - startTime;
-
-        System.out.println("╔══════════════════════════════════════════════════════════╗");
-        System.out.println("║  🎉 Quickstart Complete!                                 ║");
-        System.out.println("╚══════════════════════════════════════════════════════════╝");
-        System.out.println();
-        System.out.println("📊 Results:");
-        System.out.println("   • Model: ResNet-18 (10 classes)");
-        System.out.println("   • Augmentation: " + augment.size() + " transforms");
-        System.out.println("   • Export formats: ONNX, GGUF, LiteRT");
-        System.out.printf("   • Benchmark: %.2f ms avg, %.1f inf/s%n",
-            result.avgLatencyMs(), result.throughput());
-        System.out.println("   • Total time: " + elapsed + "ms");
-        System.out.println();
-        System.out.println("📁 Exported files:");
-        System.out.println("   • quickstart_exports/model.onnx");
-        System.out.println("   • quickstart_exports/model.gguf");
-        System.out.println("   • quickstart_exports/model.litert");
-        System.out.println();
-        System.out.println("🚀 Next steps:");
-        System.out.println("   1. Add your training data");
-        System.out.println("   2. Uncomment the trainer code");
-        System.out.println("   3. Call trainer.fit(trainLoader, valLoader)");
-        System.out.println();
-        System.out.println("📚 Documentation: https://gollek-ai.github.io/docs/sdk-modules");
+        System.out.println("Canonical trainer example:");
+        System.out.println("  jbang trainer/trainer_runtime_bootstrap.java");
     }
 }
